# django-admin

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md
admin/: apps.py  context_processors.py  dbrouters.py  readme.md  settings.py  urls.py  views.py
admin/templates/admin/: base.html  base_site.html
