[project]
name = "django-admin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shogo Sawai", email = "shogo.sawai@gmail.com" }
]
dependencies = [
    "Django<5",
    "django-environ>=0.11.2",
    "psycopg[binary,pool]>=3.1.19",
    "Pillow>=10.3.0",
    "django-multiselectfield>=0.1.12",
    "PyYAML>=6.0.1",
    "ulid-py>=1.1.0",
    "gunicorn>=22.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "django_admin:hello"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
